k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ete-training-deployment
  labels:
    apps.kubernetes.io/name: ete-training
  namespace: ete-training
spec:
  replicas: 2
  selector:
    matchLabels:
      apps.kubernetes.io/name: ete-training
  template:
    metadata:
      labels:
        apps.kubernetes.io/name: ete-training
    spec:
      containers:
        - name: app
          image: theoposty/ete-training:0.1.1 # {"$imagepolicy": "flux-system:ete-training"}
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: ete-training-service
  labels:
    apps.kubernetes.io/name: ete-training
  namespace: ete-training
spec:
  selector:
    apps.kubernetes.io/name: ete-training
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 3000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ete-training-ingress
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod"
    acme.cert-manager.io/http01-edit-in-place: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: ete-training
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
        - ete-training.posty.fr
      secretName: ete-training-tls
  rules:
    - host: ete-training.posty.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ete-training-service
                port:
                  number: 80
